新增公共函数防抖函数，公共组件获取验证码倒计时

--- a/project.config.json
+++ b/project.config.json
@@ -57,8 +57,8 @@
 			"list": [
 				{
 					"id": -1,
-					"name": "test",
-					"pathName": "pages/test/index",
+					"name": "示例",
+					"pathName": "pages/example/index",
 					"scene": null
 				}
 			]
